remove some old bisque dependencies

--- a/fov_job.j2
+++ b/fov_job.j2
@@ -20,7 +20,7 @@ ITEM_ARRAY=(
 # enable locating the source code of these scripts
 export PATH=/bin:$PATH
 export PATH=/allen/aics/animated-cell/Dan/anaconda3/bin:$PATH
-export PYTHONPATH=$PYTHONPATH:/home/danielt/cellbrowserpipeline/cellbrowser-tools:/home/danielt/cellbrowserpipeline/cellbrowser-tools/uploader
+export PYTHONPATH=$PYTHONPATH:/home/danielt/cellbrowserpipeline/cellbrowser-tools
 
 source activate /allen/aics/animated-cell/Dan/venvs/ace
 
