--- a/cellbrowser_tools/batch_job.j2
+++ b/cellbrowser_tools/batch_job.j2
@@ -11,6 +11,7 @@
 
 # enable locating the source code of these scripts
 module add anaconda3
+conda init bash
 conda activate cellbrowser-tools
 # export PYTHONPATH=$PYTHONPATH:/home/danielt/cellbrowserpipeline/cellbrowser-tools/cellbrowser_tools
 
