fix environment activation

--- a/cellbrowser_tools/batch_job.j2
+++ b/cellbrowser_tools/batch_job.j2
@@ -11,8 +11,7 @@
 
 # enable locating the source code of these scripts
 module add anaconda3
-conda init bash
-conda activate cellbrowser-tools
+source activate cellbrowser-tools
 # export PYTHONPATH=$PYTHONPATH:/home/danielt/cellbrowserpipeline/cellbrowser-tools/cellbrowser_tools
 
 {# srun the script, and add the item to the end of the script call #}
