--- a/cellbrowser_tools/batch_job.j2
+++ b/cellbrowser_tools/batch_job.j2
@@ -7,7 +7,8 @@
 {#- Lastly, add the array directive based off of the number of items in the query #}
 {#- Also add a maximum number of simultaneous jobs #}
 {#- See https://slurm.schedmd.com/sbatch.html#OPT_array for further details #}
-#SBATCH --array 0-{{ (mybatchsize) }}%{{ max_simultaneous_jobs | default(32) }}
+{#- this is 1 based to work with the "head" command below #}
+#SBATCH --array 1-{{ (mybatchsize) }}%{{ max_simultaneous_jobs | default(32) }}
 
 # enable locating the source code of these scripts
 module add anaconda3
